option('opengl', type: 'boolean', value: true, description: 'Compile with OpenGL support')
option('def_library', type: 'combo', choices: ['shared', 'static'], value: 'shared', description: 'Type of library to build')
option('is_system', type: 'boolean', value: true, description: 'Consider the headers as system headers')
